--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@
       max-height: 65%;
     }
   </style>
+  <style>
+      #frame { width: 2560px; height: 750px; background-color: #fff; overflow: hidden;
+		  margin-left:140px;
+		  max-width:140%;
+          -ms-zoom: 0.50;
+          -moz-transform: scale(0.50);
+          -moz-transform-origin: 0 0;
+          -o-transform: scale(0.25);
+          -o-transform-origin: 0 0;
+          -webkit-transform: scale(0.50);
+          -webkit-transform-origin: 0 0;
+      }
+  </style>
 
 </head>
 
@@ -103,16 +116,16 @@
 
 <section>
   <div>
-    <img src="img/jenny.jpg" style="float: left; border-radius: 150px; margin-right: 40px; width: 300px;">
+    <img src="img/Sandeep.jpg" style="float: left; border-radius: 150px; margin-right: 40px; width: 300px;">
 
     <div style="float: left; width: 400px;">
-      <h3>Jenny Tong</h3>
+      <h3>Sandeep Dinesh</h3>
       Google Cloud Platform
       Developer Advocate
       <br/>
       <br/>
-      <a href="https://plus.google.com/+mimming">+mimming</a><br/>
-      <a href="https://twitter.com/MimmingCodes">@MimmingCodes</a><br/>
+      <a href="https://github.com/thesandlord">Thesandlord</a><br/>
+      <a href="https://twitter.com/SandeepDinesh">@SandeepDinesh</a><br/>
     </div>
   </div>
 </section>
@@ -121,9 +134,11 @@
   <script type="text/template">
     ## Agenda
 
-    - What realtime is
-    - Why it's hard
-    - How Firebase makes it easy
+    - What is real time?
+	- and why it's hard
+    - What is offline?
+	- and why it's hard
+    - How <font style="color:#FFD43B;">Firebase</font> makes it easy
     - Live coding
     - Real world examples
     - Q&A
@@ -159,12 +174,9 @@
   <h2>Realtime data is</h2>
 
   <h3>Game state</h3>
-  <br/>
-
-  <iframe style="background-color: #fff; overflow: hidden;"
-          src="./asteroids" width="800" height="455" scrolling="no"></iframe>
-
-  <br/><a href="http://tinyurl.com/YayAsteroids">http://tinyurl.com/YayAsteroids</a>
+   <a href="http://mmoasteroids.firebaseapp.com">mmoasteroids.firebaseapp.com</a>
+  <br/><br/>
+  <iframe id="frame" src="https://mmoasteroids.firebaseapp.com/"></iframe>
 
 </section>
 
@@ -198,6 +210,13 @@
 </section>
 
 <section>
+  <h2>Offline is hard</h2>
+
+  <p>Mobile apps need to work. Always!</p>
+  <img class="fragment" src="img/no-internet.png">
+</section>
+
+<section>
   <h2>Firebase makes it easy</h2>
 
   <img src="img/firebase-overview2.png">
@@ -210,7 +229,7 @@
   <div class="fragment">
     <h4>Write Data</h4>
 <pre style="margin-bottom:-50px;"><code data-trim>
-var ref = new Firebase("https://hai.firebaseio-demo.com/");
+var ref = new Firebase("https://hai.firebaseio.com/");
 
 ref.set("Hello, Developers!");
 </code></pre>
@@ -226,6 +245,29 @@ ref.on("value", function (snapshot) {
 });
 </code></pre>
   </div>
+</section>
+
+<section>
+  <h2>Some Android code</h2>
+  <br/>
+
+  <div class="fragment">
+    <h4>Persist Data</h4>
+<pre style="margin-bottom:-50px;"><code data-trim>
+Firebase.getDefaultConfig().setPersistenceEnabled(true);
+</code></pre>
+  </div>
+  <br/><br/>
+
+  <div class="fragment">
+    <h4>Keep Synced</h4>
+<pre><code data-trim>
+Firebase ref = new Firebase("https://hai.firebaseio.com/");
+
+ref.keepSynced(true);
+</code></pre>
+  </div>
+
 </section>
 
 <section>
@@ -258,8 +300,8 @@ ref.on("value", function (snapshot) {
   <ul>
     <li>Founded in 2011</li>
     <li class="fragment">Acquired by Google in October 2014</li>
-    <li class="fragment"><span id="current-devs">160,000</span> developers</li>
-    <li class="fragment">Over 1,000,000 concurrent connections</li>
+    <li class="fragment"><span id="current-devs">190,000</span> developers</li>
+    <li class="fragment">Over 1,500,000 concurrent connections</li>
   </ul>
   <script>
     $(document).ready(function () {
@@ -347,11 +389,14 @@ ref.on("value", function (snapshot) {
   <script type="text/template">
     ## We talked about this stuff
 
-    - What realtime is
-    - Why it's hard
-    - How Firebase makes it easy
+    - What is real time?
+	- and why it's hard
+    - What is offline?
+	- and why it's hard
+    - How <font style="color:#FFD43B;">Firebase</font> makes it easy
     - Live coding
     - Real world examples
+    - Q&A
   </script>
 </section>
 
@@ -359,7 +404,7 @@ ref.on("value", function (snapshot) {
 <section>
   <h1>The End</h1>
   <ul>
-    <li>Slides: <a href="https://mimming.com/presos/firebase-overview">mimming.com/presos/firebase-overview</a>
+    <li>Slides: <a href="http://sandeepdinesh.com/presos/firebase-overview/index.html">sandeepdinesh.com/presos/firebase-overview/index.html</a>
     </li>
     <li>Try Firebase: <a href="https://www.firebase.com/tutorial">firebase.com/tutorial</a></li>
     <li>Chat Example: <a href="https://github.com/mimming/firebase-tiny-chat">github.com/mimming/firebase-tiny-chat</a></li>
